# Konex

./: README.md
client/: index.html  package.json
client/src/: App.tsx  index.tsx
client/src/app/: About.tsx  Auth.tsx  Core.tsx  Posts.tsx
client/src/components/: Card.tsx  CheckAuth.tsx  Content.tsx  Icons.tsx
server/: Cargo.toml
server/migrations/: 20260225060617_init.sql
server/src/: lib.rs  main.rs
server/src/apis/: mod.rs  users.rs
server/src/apis/routes/: mod.rs  users.rs
server/src/models/: mod.rs  users.rs
server/src/utils/: hash.rs  mod.rs
