[package]
name = "server"
version = "0.1.0"
authors = ["Riky Ripaldo", "rikyripaldo.@gmail.com"]
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-multipart = "0.7.2"
actix-web = "4.13.0"
anyhow = "1.0.102"
argon2 = "0.5.3"
chrono = { version = "0.4.44", features = ["serde"] }
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "macros"] }
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = { version = "1.21.0", features = ["v4", "serde"] }
